@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.yammer.v1"
       android:versionCode="23"
-      android:versionName="1.3.4">
+      android:versionName="1.3.5">
 
 	<!--
 		Permissions 
