@@ -102,7 +102,7 @@ public class Message extends Base {
     if(0 != _db.update(TABLE_NAME, values, keyClause(), null)) {
       if(DEBUG) Log.d(getClass().getName(), "Updated message: " + messageId);
     } else {
-      _db.insertOrThrow(TABLE_NAME, null, values);                   
+      _db.insert(TABLE_NAME, null, values);
       if(DEBUG) Log.d(getClass().getName(), "Inserted message: " + messageId);
     }
     
